# risc-v-logism

./: .gitignore  README.md  riscv.circ  sum1_10.txt  test_1  todo.txt  truthtable.txt
.github/workflows/: ci.yml
altera-DE1-SoC/: PC.sv  hps_sdram_p0_all_pins.txt  hps_sdram_p0_summary.csv  main.qpf  main.qsf  main.qws  main.sdc  main.sdc.bak  main.sv  main.v  main.v.bak  onchip_mem.mif  soc_system.qsys  soc_system.sopcinfo
altera-DE1-SoC/.qsys_edit/: preferences.xml  soc_system.xml  soc_system_schematic.nlv
altera-DE1-SoC/hps_isw_handoff/soc_system_hps_0/: emif.xml  hps.xml  id  sequencer_defines.h  soc_system_hps_0.hiof
altera-DE1-SoC/soc_system/: soc_system.bsf  soc_system.cmp  soc_system.html  soc_system.xml  soc_system_bb.v  soc_system_generation.rpt  soc_system_generation_previous.rpt  soc_system_inst.v  soc_system_inst.vhd
altera-DE1-SoC/soc_system/synthesis/: soc_system.debuginfo  soc_system.qip  soc_system.v
altera-DE1-SoC/soc_system/synthesis/submodules/: altera_default_burst_converter.sv  altera_incr_burst_converter.sv  altera_mem_if_dll_cyclonev.sv  altera_mem_if_oct_cyclonev.sv  altera_merlin_burst_adapter_new.sv  altera_merlin_width_adapter.sv  altera_wrap_burst_converter.sv  hps.pre.xml  hps_AC_ROM.hex  hps_sdram.v  hps_sdram_p0.sv  hps_sdram_p0_altdqdqs.v  hps_sdram_p0_clock_pair_generator.v  hps_sdram_p0_parameters.tcl  hps_sdram_p0_phy_csr.sv  hps_sdram_p0_timing.tcl  hps_sdram_pll.sv  soc_system_hps_0.v  soc_system_hps_0_fpga_interfaces.sv  soc_system_hps_0_hps_io.v  soc_system_hps_0_hps_io_border.sdc  soc_system_hps_0_hps_io_border.sv  soc_system_mm_interconnect_0.v  soc_system_mm_interconnect_0_avalon_st_adapter.v  soc_system_mm_interconnect_0_cmd_demux.sv  soc_system_mm_interconnect_0_cmd_mux.sv  soc_system_mm_interconnect_0_router.sv  soc_system_mm_interconnect_0_router_002.sv  soc_system_mm_interconnect_0_rsp_demux.sv  soc_system_mm_interconnect_0_rsp_mux.sv  soc_system_onchip_memory2_0.v  soc_system_onchip_memory2_1.v
altera-DE1-SoC/soc_system/synthesis/submodules/sequencer/: sequencer_auto.pre.h  sequencer_auto_ac_init.pre.c
verilog/: .gitignore  CMakeLists.txt  Makefile
verilog/.github/workflows/: ci.yml
verilog/assertions/: ControlUnit_assert.sv  PC_assert.sv  bind_ControlUnit.sv  bind_PC.sv
verilog/rtl/: ALU.sv  ALU.v  ALUControlUnit.sv  ControlUnit.sv  ImmGen.sv  PC.sv  RegFile.sv  main.sv
verilog/rtl/pkg/: alu_pkg.sv  alucu_pkg.sv  cpu_pkg.sv
verilog/tb/: tb_ALU.cpp  tb_ALUControlUnit.cpp  tb_CPU.cpp  tb_ControlUnit.cpp  tb_ImmGen.cpp  tb_PC.cpp  tb_RegFile.cpp  tb_utils.h
verilog/utils/: generator.py  opcode_defines.sv  opcode_defines_template.sv.j2  r32i_base_instruction.yaml  todo.txt
